<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/usrFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsrStage">


    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
         android:layout_height="50dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/qmui_config_color_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--官方QMUIGroupListView的用法-->
            <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
                android:id="@+id/group_list_item_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>