<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderStage"
    android:id="@+id/orderFrame">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:id="@+id/NoOrderMsg"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:id="@+id/tmpOrderTitle"
            android:gravity="center"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/TmpOrderContainer"
            android:layout_gravity="center_horizontal">

        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:id="@+id/OrderTitle"
            android:gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/OrderContainer"
            android:layout_gravity="center_horizontal">

        </androidx.recyclerview.widget.RecyclerView>



    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>